# Ramaera_biduaERP

./: .env.sample  .gitignore  .replit  package-lock.json  package.json  progress_log.md  pyproject.toml  replit.md
backend/: config.py  database.py  main.py  models.py  schemas.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  attendance.py  auth.py  customers.py  departments.py  employees.py  leads.py  leave_requests.py  users.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py
backend/app/utils/: __init__.py  database.py
backend/tests/: __init__.py  test_auth.py
docs/: README.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/common/: Header.css  Header.tsx  Sidebar.css  Sidebar.tsx
frontend/src/components/crm/: CustomersList.tsx
frontend/src/services/: api.ts
